--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,15 @@
   },
   "dependencies": {
     "@elastic/elasticsearch": "^8.6.0",
-    "express": "^4.18.2"
+    "@types/elasticsearch": "^5.0.40",
+    "body-parser": "^1.20.2",
+    "elastic-dsl-typescript": "^1.8.0",
+    "elasticsearch": "^16.7.3",
+    "elasticsearch-dsl": "^0.0.1",
+    "elasticsearch-odm": "^0.0.5",
+    "express": "^4.18.2",
+    "install": "^0.13.0",
+    "mongoose": "^7.0.3",
+    "npm": "^9.6.4"
   }
 }
