--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 .DS_Store
-frontend/node_modules
+frontend/node_modules/
 frontend/ios
 frontend/android
-server/node_modules
+frontend/vendor
+server/node_modules/
 .expo/
 dist/
