--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,15 +10,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-deck-swiper": "^2.0.13",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-reanimated": "^3.0.2",
     "react-native-reanimated-carousel": "^3.3.0",
     "react-native-safe-area-context": "^4.5.1",
-    "react-native-screens": "^3.20.0"
+    "react-native-screens": "^3.20.0",
+    "react-native-view-overflow": "^0.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
