--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npx tsc",
-    "start": "node dist/index.js",
+    "start": "ts-node-dev src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
     "lint": "eslint . --ext .ts"
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.1",
     "@types/node": "^18.15.11",
@@ -21,16 +22,18 @@
     "concurrently": "^8.0.1",
     "eslint": "^8.37.0",
     "nodemon": "^2.0.22",
-    "typescript": "^5.0.3"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.0.4"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
     "chai": "^4.3.7",
     "chai-http": "^4.3.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "install": "^0.13.0",
     "jest": "^29.5.0",
-    "mongoose": "^7.0.3",
+    "mongoose": "^7.0.4",
     "npm": "^9.6.4",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1"
