--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/chai-http": "^4.2.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.1",
@@ -33,6 +34,7 @@
     "express": "^4.18.2",
     "install": "^0.13.0",
     "jest": "^29.5.0",
+    "mocha": "^10.2.0",
     "mongoose": "^7.0.4",
     "npm": "^9.6.4",
     "ts-jest": "^29.1.0",
