--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npx jest",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
     "lint": "eslint . --ext .ts"
   },
@@ -17,12 +17,17 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.1",
+    "@types/mocha": "^10.0.1",
     "@types/node": "^18.15.11",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "concurrently": "^8.0.1",
     "eslint": "^8.37.0",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.22",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
   },
@@ -34,11 +39,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "install": "^0.13.0",
-    "jest": "^29.5.0",
     "mocha": "^10.2.0",
     "mongoose": "^7.0.4",
     "npm": "^9.6.4",
-    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1"
   }
 }
